gcc/testsuite/gcc.dg/driver-specs.c
// { dg-additional-options "-specs=not-a-file" }
// { dg-prune-output "compilation terminated" }
// { dg-error "cannot read spec file" "" { target *-*-* } 0 }

